1999-05-12  Jason Merrill  <jason@yorick.cygnus.com>

	* configure.in (compiler_name): Don't do the skip-this-dir thing
	if we're reconfiguring.

1999-04-29  Nathan Sidwell  <nathan@acm.org>

	* streambuf.h (ios::~ios): Use operator delete[] to remove _arrays.

Mon Apr 12 19:22:44 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* filedoalloc.c (_POSIX_SOURCE): Remove definition.
	* fileops.c (_POSIX_SOURCE): Likewise.
	* iopopen.c (_POSIX_SOURCE): Likewise.
	* procbuf.cc (_POSIX_SOURCE): Likewise.
	* libioP.h (_POSIX_SOURCE): And define it here.
	* stdiostream.cc: Include libioP.h before others.

Fri Apr  2 15:11:58 1999  H.J. Lu  (hjl@gnu.org)

	* libio/configure.in (gxx_include_dir): Handle it.
	* libio/Makefile.in: Likewise.

Wed Mar 24 22:36:45 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* configure.in (EXEEXT): Define.
	(compiler_name): Use.

1999-03-24  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* gen-params (CONFIG_NM): `test ... -o ...' is not portable.

Thu Mar 11 01:07:55 1999  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>

	* configure.in: Cleanup and add mh-*pic handling for arm, powerpc

Fri Mar  5 01:15:15 1999  H.J. Lu  (hjl@gnu.org)

        * config/linuxlibc1.mt (MT_CFLAGS): Add -D_G_STDIO_USES_LIBIO
        -D_G_HAVE_WEAK_SYMBOL.

        * genops.c: Add the proper weak alias if _G_STDIO_USES_LIBIO
        and _G_HAVE_WEAK_SYMBOL are defined.
        * iofclose.c: Likewise.
        * iofeof.c: Likewise.
        * ioferror.c: Likewise.
        * iogetc.c: Likewise.
        * ioputc.c: Likewise.
        * iovsprintf.c: Likewise.
        * iovsscanf.c: Likewise.

Sun Feb 28 22:39:17 1999  Geoffrey Noer  <noer@cygnus.com>

	* configure.in: Check cygwin*, not cygwin32*.

Wed Feb 10 09:25:48 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* gen-params (VTABLE_LABEL_PREFIX): Handle windows32. 

Wed Feb  3 22:05:41 1999  H.J. Lu  (hjl@gnu.org)
			  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (iostream.list): Remove dependency on
	stamp-picdir.