@@ -2,18 +2,6 @@
 # necessary for a configure script to process the program in
 # this directory.  For more information, look at ../configure.
 
-# find a possible extension of the just-built C++ compiler. Note that this
-# is not the only choice, taking into cross and canadian cross into
-# account, and we need to search for with and without the extension.
-case "${host_alias}" in
-*cygwin* | *mingw32*)
-  EXEEXT=.exe
-  ;;
-*)
-  EXEEXT=
-  ;;
-esac
-
 # If the language specific compiler does not exist, but the "gcc" directory 
 # does, we do not build anything. Note, $r is set by the top-level Makefile.
 # Note that when we look for the compiler, we search both with and without
@@ -25,7 +13,7 @@ rm -f skip-this-dir
 if test -n "$r" && [ -z "$norecursion" ] ; then
   if test -d "$r"/gcc; then
     if test -f "$r"/gcc/$compiler_name \
-       || test -f "$r"/gcc/$compiler_name$EXEEXT; then
+       || test -f "$r"/gcc/$compiler_name.exe; then
       true
     else
       echo "rm -f multilib.out" > skip-this-dir
